fix: remove overflow in chart-container

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -100,7 +100,6 @@ body {
 .chart-container {
   height: 250px;
   overflow-y: hidden;
-  overflow-x: scroll;
   border-radius: 0.3em;
 }
 
